# Catatron

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/catatron_description/share/catatron_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/catatron_description/share/catatron_description/catatron_description/: inv_kin_dual.py  joint_angles_param.py
install/catatron_description/share/catatron_description/config/: joint_controller.yaml
install/catatron_description/share/catatron_description/launch/: pushup.launch.py  robot.launch.py
install/catatron_description/share/catatron_description/mesh_files/: L3_obj.dae  R2_obj.dae  R3_obj.dae
install/catatron_description/share/catatron_description/scripts/: controller.py  inv_kin.py
install/catatron_description/share/catatron_description/urdf/: catatron.urdf
install/catatron_description/share/catatron_description/worlds/: empty_world.world
install/catatron_gait_control/share/catatron_gait_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/catatron_gait_control/share/catatron_gait_control/catatron_gait_control/: CatatronCrawl.py  CatatronGaitControl.py  CatatronMainControl.py  CatatronStand.py  JoystickController.py  PID.py  tempCodeRunnerFile.py
install/catatron_gait_control/share/catatron_gait_control/launch/: CatatronGait.launch.py
log/: latest_build
src/catatron_description/: cMakeLists.txt  package.xml  setup.cfg  setup.py
src/catatron_description/catatron_description/: inv_kin_dual.py  inv_kin_node.py
src/catatron_description/config/: joint_controller.yaml
src/catatron_description/launch/: pushup.launch.py  robot.launch.py
src/catatron_description/mesh_files/: FL2.dae  FL3.dae  FR2.dae  FR3.dae  L2_obj.dae  (+4 more)
src/catatron_gait_control/: setup.cfg  setup.py
(+30 files in other folders)
