<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>catatron_gait_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="me23b208@smail.iitm.ac.in">abhinand</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>gazebo_ros</depend>
  <depend>numpy</depend>
  <depend>urdf_parser_py</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
